--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-﻿# Living Ledger Auditor - Environment Configuration
+# Aurea Insight - Environment Configuration
 # Copy this file to .env and fill in your values
 
 # =============================================================================
@@ -11,7 +11,7 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # OPTIONAL: Database Configuration
 # =============================================================================
 # If not set, the app runs with in-memory storage (good for demos)
-# DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/living_ledger
+# DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/aurea_insight
 
 # =============================================================================
 # OPTIONAL: External Registry API Keys
