--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ alembic>=1.13.0
 
 # AI - Gemini (using new google-genai package)
 google-genai>=1.0.0
+xhtml2pdf>=0.2.16
 
 # Data Processing (use binary wheels)
 pandas
