Add IFRS/GAAP selector and Cloud Run deployment fixes
- Add IFRS rules module with IAS/IFRS standard references
- Add accounting standard selector (IFRS/GAAP) to audit workflow
- Update AJE generator to support both IFRS and GAAP standards
- Fix backend Dockerfile for Cloud Run (PORT env, cairo deps)
- Fix frontend Dockerfile for production build with API URL arg
- Fix CORS config to accept comma-separated origins (Cloud Run compat)
- Replace hardcoded localhost URLs with API_BASE_URL in frontend
- Fix TypeScript null safety in AuditorChat component

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,8 +11,16 @@ RUN npm install
 # Copy application code
 COPY . .
 
-# Expose port
-EXPOSE 3000
+# Build-time API URL (required for production; baked into client bundle)
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
 
-# Run development server
-CMD ["npm", "run", "dev"]
+# Production build
+RUN npm run build
+
+# Expose port (Cloud Run sets PORT, often 8080)
+EXPOSE 8080
+ENV PORT=8080
+
+# Run production server
+CMD ["npm", "start"]
