--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "dev": "concurrently -n \"FE,BE\" -c \"bgBlue.bold,bgMagenta.bold\" \"npm run dev --prefix frontend\" \"cd backend && venv\\Scripts\\activate && python -m uvicorn main:app --reload\""
+        "dev": "concurrently -n \"FE,BE\" -c \"bgBlue.bold,bgMagenta.bold\" \"npm run dev --prefix frontend\" \"cd backend && venv\\Scripts\\activate && python -m uvicorn main:app --reload --port 8888\""
     },
     "devDependencies": {
         "concurrently": "^9.1.2"
